--- a/wallet/src/main/resources/application.properties
+++ b/wallet/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.application.name=wallet
-
+spring.application.name=wallet-service
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/wallet_db
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
 spring.jpa.hibernate.ddl-auto=update
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.mvc.servlet.path=/api/v1
 
